議論を生成できるように修正
