# internal/learning/api/oas/oas_response_encoders_gen.go
@@ -27,16 +27,12 @@ func encodeV1AiLearningWorkspacesWorkspaceIdDiscussionsDiscussionIdCommentsComme
 	return nil
 }
 
-func encodeV1AiLearningWorkspacesWorkspaceIdDiscussionsDiscussionIdCommentsGeneratePostResponse(response []Comment, w http.ResponseWriter) error {
+func encodeV1AiLearningWorkspacesWorkspaceIdDiscussionsGeneratePostResponse(response *GeneratedDiscussion, w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(201)
 
 	e := new(jx.Encoder)
-	e.ArrStart()
-	for _, elem := range response {
-		elem.Encode(e)
-	}
-	e.ArrEnd()
+	response.Encode(e)
 	if _, err := e.WriteTo(w); err != nil {
 		return errors.Wrap(err, "write")
 	}
